[package]
authors = ["Mei Boudreau <xanizl@me.com>", "Zeyla Hellyer <zey@zey.moe>"]
name = "kitsu_io"
version = "0.2.0"

[dependencies.serde]
optional = true
version = "~1.0"

[dependencies.serde_derive]
optional = true
version = "~1.0"

[dependencies.serde_json]
optional = true
version = "~1.0"

[dependencies.hyper]
optional = true
version = "~0.11"

[dependencies.hyper-tls]
optional = true
version = "~0.1"

[dependencies.reqwest]
optional = true
version = "~0.8"

[dev-dependencies]
futures = "~0.1"
tokio-core = "~0.1"

[features]
default = ["reqwest-support"]
hyper-support = ["hyper", "hyper-tls"]
reqwest-support = ["reqwest", "serde-items"]
serde-items = ["serde", "serde_derive", "serde_json"]
